bynkc/tests/fixtures/positive/59_uses_single/src/users/main.bynk
commons users

uses ids

type User = {
  id:   UserId,
  name: String where NonEmpty,
}
