bynkc/tests/fixtures/negative/207_bearer_missing_secret/src/demo.bynk
context demo

type UserId = String where NonEmpty

actor User { auth = Bearer, identity = UserId }
